<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginBottom="@dimen/common_padding"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginEnd="@dimen/common_padding"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginEnd="@dimen/common_padding"
        android:layout_marginBottom="@dimen/common_padding"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginBottom="@dimen/common_padding"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageButton
        android:id="@+id/like"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

    <TextView
        android:id="@+id/likes_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/common_padding"
        android:text="@string/counter_like"
        android:textSize="@dimen/size_counter"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />

    <ImageButton
        android:id="@+id/repost"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/repost"
        app:layout_constraintStart_toEndOf="@id/likes_counter"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:srcCompat="@drawable/ic_baseline_polyline_24" />

    <TextView
        android:id="@+id/repost_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/common_padding"
        android:text="@string/counter_repost"
        android:textSize="@dimen/size_counter"
        app:layout_constraintBottom_toBottomOf="@id/repost"
        app:layout_constraintStart_toEndOf="@id/repost"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />

    <ImageButton
        android:id="@+id/amount_views"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/amount_views"
        app:layout_constraintEnd_toStartOf="@id/views_counter"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

    <TextView
        android:id="@+id/views_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_views"
        app:layout_constraintBottom_toBottomOf="@id/amount_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />

</androidx.constraintlayout.widget.ConstraintLayout>